--- a/views/company-overview.ejs
+++ b/views/company-overview.ejs
@@ -1398,7 +1398,7 @@
 </section>
 
 
-        <!-- blog area start -->
+<!-- blog area start -->
 <section class="rs-blog-area section-space-bottom rs-blog-two has-theme-green">
     <div class="container" style="position: relative; z-index: 2;">
         <div class="row justify-content-center align-items-center">
@@ -1441,8 +1441,15 @@
                         </div>
                         <% } %>
                         <h5 class="rs-blog-title">
-                            <a href="/blogDetails/<%= blog.slug %>"><%= blog.title %></a>
-                        </h5>
+                                <a href="/blogDetails/<%= blog && blog.slug ? blog.slug : '' %>">
+                                    <%= blog && blog.title 
+                                        ? (blog.title.length > 80 
+                                            ? blog.title.slice(0, 80) + "..." 
+                                            : blog.title)
+                                        : "Untitled" 
+                                    %>
+                                </a>
+                            </h5>
                         <div class="rs-blog-meta">
                             <% if(blog.createdBy){ %>
                             <div class="rs-blog-meta-item">
@@ -1474,7 +1481,7 @@
         </div><!-- row end -->
     </div><!-- container -->
 </section>
-        <!-- blog area end -->
+<!-- blog area end -->
 
 
     </main>
