--- a/views/home.ejs
+++ b/views/home.ejs
@@ -50,7 +50,7 @@
     <!-- preloader end -->
 
     <!-- Header area start -->
-<header>
+    <header>
         <div class="rs-header-area rs-header-one rs-sticky-header" id="rs-sticky-header">
             <div class="container-fluid g-0">
                 <div class="rs-header-inner">
@@ -64,14 +64,14 @@
                     <div class="rs-header-menu">
                      
                         <nav id="mobile-menu" class="main-menu">
-                            <ul class="multipage-menu">
+                             <ul class="multipage-menu">
                                 <li >
                                     <a href="/">Home</a>
                                  
                                 </li>
                                 <!-- about menu -->
                                 <li class="menu-item-has-children">
-                                    <a href="/company_overview">About</a>
+                                    <a href="/company_overview">About Teraxo</a>
                                     <ul class="submenu last-children">
                                         <li><a href="/company_overview">Company Overview</a></li>
                                     <li><a href="/why_choose_us">Why Teraxo </a></li>
@@ -79,17 +79,18 @@
                                 </li>
                                 <!-- page menu -->
                                   <li class="">
-                                    <a href="/products">Products</a>
+                                    <a href="/products">Our Products</a>
+                                  
                                 </li>
                                 <!-- elements menu -->
                           
-                                  <li class="menu-item-has-children">
+   <li class="menu-item-has-children">
                                     <a href="/footwear_industry">Industries</a>
                                     <ul class="submenu last-children">
                                         <li><a href="/footwear_industry">Footwear Manufacturing</a></li>
                                     <li><a href="/industry_signage">Signage & Flex Board</a></li>
                                     <li><a href="/industry_furniture">Furniture & Woodworking</a></li>
-                                    <li><a href="/industry_furniture">Interiors & Modular Kitchen</a></li>
+                                    <li><a href="/industry_interiors">Interiors & Modular Kitchen</a></li>
                                     <li><a href="/industry_automotive">Automotive</a></li>
                                     <li><a href="/industry_pvc">PVC & UPVC Fabrication</a></li>
                                     <li><a href="/industry_packaging">Packaging</a></li>
@@ -112,7 +113,7 @@
                       
                         <!-- search area end -->
                         <div class="rs-header-btn">
-                            <a class="rs-btn has-theme-orange has-icon has-bg" href="tel:+918105077170">Get In Touch
+                            <a class="rs-btn has-theme-orange has-icon has-bg" href="/contact">Get In Touch
                                 <span class="icon-box">
                                     <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                                         <path
@@ -181,7 +182,7 @@
                                         <li><a href="/footwear_industry">Footwear Manufacturing</a></li>
                                     <li><a href="/industry_signage">Signage & Flex Board</a></li>
                                     <li><a href="/industry_furniture">Furniture & Woodworking</a></li>
-                                    <li><a href="/industry_furniture">Interiors & Modular Kitchen</a></li>
+                                    <li><a href="/industry_interiors">Interiors & Modular Kitchen</a></li>
                                     <li><a href="/industry_automotive">Automotive</a></li>
                                     <li><a href="/industry_pvc">PVC & UPVC Fabrication</a></li>
                                     <li><a href="/industry_packaging">Packaging</a></li>
