--- a/views/products.ejs
+++ b/views/products.ejs
@@ -62,65 +62,58 @@
                         </div>
                     </div>
                     <div class="rs-header-menu">
-
+                     
                         <nav id="mobile-menu" class="main-menu">
-                            <ul class="multipage-menu">
-                                <li>
+                             <ul class="multipage-menu">
+                                <li >
                                     <a href="/">Home</a>
-
+                                 
                                 </li>
                                 <!-- about menu -->
                                 <li class="menu-item-has-children">
-                                    <a href="/company_overview">About</a>
+                                    <a href="/company_overview">About Teraxo</a>
                                     <ul class="submenu last-children">
                                         <li><a href="/company_overview">Company Overview</a></li>
-                                        <li><a href="/why_choose_us">Why Teraxo </a></li>
+                                    <li><a href="/why_choose_us">Why Teraxo </a></li>
                                     </ul>
                                 </li>
                                 <!-- page menu -->
-                                <li class="menu-item-has-children">
-                                    <a href="/products">Products</a>
-                                    <ul class="submenu last-children">
-                                        <li><a href="/products">All Products</a></li>
-                                        <li><a href="/products">F40</a></li>
-                                        <li><a href="/products">R40</a></li>
-                                        <li><a href="/products">FX40</a></li>
-                                        <li><a href="/products">W40</a></li>
-                                        <li><a href="/products">G40</a></li>
-                                    </ul>
+                                  <li class="">
+                                    <a href="/products">Our Products</a>
+                                  
                                 </li>
                                 <!-- elements menu -->
-
-                                <li class="menu-item-has-children">
+                          
+   <li class="menu-item-has-children">
                                     <a href="/footwear_industry">Industries</a>
                                     <ul class="submenu last-children">
                                         <li><a href="/footwear_industry">Footwear Manufacturing</a></li>
-                                        <li><a href="/industry_signage">Signage & Flex Board</a></li>
-                                        <li><a href="/industry_furniture">Furniture & Woodworking</a></li>
-                                        <li><a href="/industry_interiors">Interiors & Modular Kitchen</a></li>
-                                        <li><a href="/industry_automotive">Automotive</a></li>
-                                        <li><a href="/industry_pvc">PVC & UPVC Fabrication</a></li>
-                                        <li><a href="/industry_packaging">Packaging</a></li>
-                                        <li><a href="/industry_handicrafts">Handicrafts & Toys</a></li>
+                                    <li><a href="/industry_signage">Signage & Flex Board</a></li>
+                                    <li><a href="/industry_furniture">Furniture & Woodworking</a></li>
+                                    <li><a href="/industry_interiors">Interiors & Modular Kitchen</a></li>
+                                    <li><a href="/industry_automotive">Automotive</a></li>
+                                    <li><a href="/industry_pvc">PVC & UPVC Fabrication</a></li>
+                                    <li><a href="/industry_packaging">Packaging</a></li>
+                                    <li><a href="/industry_handicrafts">Handicrafts & Toys</a></li>
                                     </ul>
                                 </li>
                                 <li class="">
                                     <a href="/blogs">Blog</a>
-
+                               
                                 </li>
                                 <li class="">
-                                    <a href="contact.html">Contact</a>
-
+                                    <a href="/contact">Contact</a>
+                                  
                                 </li>
                             </ul>
                         </nav>
                     </div>
                     <div class="rs-header-right">
                         <!-- search area start -->
-
+                      
                         <!-- search area end -->
                         <div class="rs-header-btn">
-                            <a class="rs-btn has-theme-orange has-icon has-bg" href="contact.html">Get In Touch
+                            <a class="rs-btn has-theme-orange has-icon has-bg" href="/contact">Get In Touch
                                 <span class="icon-box">
                                     <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                                         <path
@@ -167,60 +160,53 @@
                             <ul class="multipage-menu">
                                 <li class="">
                                     <a href="/">Home</a>
-
+                                 
                                 </li>
                                 <!-- about menu -->
                                 <li class="menu-item-has-children">
-                                    <a href="/company_overview">About</a>
+                                    <a href="/company_overview">About Teraxo</a>
                                     <ul class="submenu last-children">
-                                        <li><a href="/company_overview">Company Overview</a></li>
-                                        <li><a href="/why_choose_us">Why Teraxo </a></li>
+                                  <li><a href="/company_overview">Company Overview</a></li>
+                                    <li><a href="/why_choose_us">Why Teraxo </a></li>
                                     </ul>
                                 </li>
                                 <!-- page menu -->
-                                <li class="menu-item-has-children">
-                                    <a href="/products">Products</a>
-                                    <ul class="submenu last-children">
-                                        <li><a href="/products">All Products</a></li>
-                                        <li><a href="/products">F40</a></li>
-                                        <li><a href="/products">R40</a></li>
-                                        <li><a href="/products">FX40</a></li>
-                                        <li><a href="/products">W40</a></li>
-                                        <li><a href="/products">G40</a></li>
-                                    </ul>
+                         <li class="">
+                                    <a href="/products">Our Products</a>
+                                
                                 </li>
                                 <!-- elements menu -->
-                                <li class="menu-item-has-children">
-                                    <a href="industries.html">Industries</a>
+                               <li class="menu-item-has-children">
+                                    <a href="/footwear_industry">Industries</a>
                                     <ul class="submenu last-children">
                                         <li><a href="/footwear_industry">Footwear Manufacturing</a></li>
-                                        <li><a href="/industry_signage">Signage & Flex Board</a></li>
-                                        <li><a href="/industry_furniture">Furniture & Woodworking</a></li>
-                                        <li><a href="/industry_interiors">Interiors & Modular Kitchen</a></li>
-                                        <li><a href="/industry_automotive">Automotive</a></li>
-                                        <li><a href="/industry_pvc">PVC & UPVC Fabrication</a></li>
-                                        <li><a href="/industry_packaging">Packaging</a></li>
-                                        <li><a href="/industry_handicrafts">Handicrafts & Toys</a></li>
+                                    <li><a href="/industry_signage">Signage & Flex Board</a></li>
+                                    <li><a href="/industry_furniture">Furniture & Woodworking</a></li>
+                                    <li><a href="/industry_interiors">Interiors & Modular Kitchen</a></li>
+                                    <li><a href="/industry_automotive">Automotive</a></li>
+                                    <li><a href="/industry_pvc">PVC & UPVC Fabrication</a></li>
+                                    <li><a href="/industry_packaging">Packaging</a></li>
+                                    <li><a href="/industry_handicrafts">Handicrafts & Toys</a></li>
                                     </ul>
                                 </li>
 
-                                <li>
+                                <li >
                                     <a href="/blogs">Blog</a>
-
+                               
                                 </li>
-                                <li>
-                                    <a href="contact.html">Contact</a>
-
+                                <li >
+                                    <a href="/contact">Contact</a>
+                                
                                 </li>
                             </ul>
                         </nav>
                     </div>
                     <div class="rs-header-right">
                         <!-- search area start -->
-
+                    
                         <!-- search area end -->
                         <div class="rs-header-btn">
-                            <a class="rs-btn has-theme-light-green has-icon has-bg" href="contact.html">Get In Touch
+                            <a class="rs-btn has-theme-light-green has-icon has-bg" href="/contact">Get In Touch
                                 <span class="icon-box">
                                     <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                                         <path
@@ -419,7 +405,12 @@
                                         </h5>
                                         <% if (product.subDescription) { %>
                                             <div class="rs-portfolio-tag">
-                                                <a href="/productDetails/<%= product.slug %>"><%= product.subDescription %></a>
+                                                <a href="/productDetails/<%= product.slug %>">
+                                                    <%= product.subDescription.split('.').length > 1 
+                                                        ? product.subDescription.split('.')[0] + '.' + ' ...' 
+                                                        : product.subDescription 
+                                                    %>
+                                                </a>
                                             </div>
                                         <% } %>
                                         <div class="rs-services-btn-wrapper">
