--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -61,62 +61,55 @@
                         </div>
                     </div>
                     <div class="rs-header-menu">
-
+                     
                         <nav id="mobile-menu" class="main-menu">
-                            <ul class="multipage-menu">
-                                <li>
+                             <ul class="multipage-menu">
+                                <li >
                                     <a href="/">Home</a>
-
+                                 
                                 </li>
                                 <!-- about menu -->
                                 <li class="menu-item-has-children">
-                                    <a href="/company_overview">About</a>
+                                    <a href="/company_overview">About Teraxo</a>
                                     <ul class="submenu last-children">
                                         <li><a href="/company_overview">Company Overview</a></li>
-                                        <li><a href="/why_choose_us">Why Teraxo </a></li>
+                                    <li><a href="/why_choose_us">Why Teraxo </a></li>
                                     </ul>
                                 </li>
                                 <!-- page menu -->
-                                <li class="menu-item-has-children">
-                                    <a href="/products">Products</a>
-                                    <ul class="submenu last-children">
-                                        <li><a href="/products">All Products</a></li>
-                                        <li><a href="/products">F40</a></li>
-                                        <li><a href="/products">R40</a></li>
-                                        <li><a href="/products">FX40</a></li>
-                                        <li><a href="/products">W40</a></li>
-                                        <li><a href="/products">G40</a></li>
-                                    </ul>
+                                  <li class="">
+                                    <a href="/products">Our Products</a>
+                                  
                                 </li>
                                 <!-- elements menu -->
-
-                                <li class="menu-item-has-children">
+                          
+   <li class="menu-item-has-children">
                                     <a href="/footwear_industry">Industries</a>
                                     <ul class="submenu last-children">
                                         <li><a href="/footwear_industry">Footwear Manufacturing</a></li>
-                                        <li><a href="/industry_signage">Signage & Flex Board</a></li>
-                                        <li><a href="/industry_furniture">Furniture & Woodworking</a></li>
-                                        <li><a href="/industry_interiors">Interiors & Modular Kitchen</a></li>
-                                        <li><a href="/industry_automotive">Automotive</a></li>
-                                        <li><a href="/industry_pvc">PVC & UPVC Fabrication</a></li>
-                                        <li><a href="/industry_packaging">Packaging</a></li>
-                                        <li><a href="/industry_handicrafts">Handicrafts & Toys</a></li>
+                                    <li><a href="/industry_signage">Signage & Flex Board</a></li>
+                                    <li><a href="/industry_furniture">Furniture & Woodworking</a></li>
+                                    <li><a href="/industry_interiors">Interiors & Modular Kitchen</a></li>
+                                    <li><a href="/industry_automotive">Automotive</a></li>
+                                    <li><a href="/industry_pvc">PVC & UPVC Fabrication</a></li>
+                                    <li><a href="/industry_packaging">Packaging</a></li>
+                                    <li><a href="/industry_handicrafts">Handicrafts & Toys</a></li>
                                     </ul>
                                 </li>
                                 <li class="">
                                     <a href="/blogs">Blog</a>
-
+                               
                                 </li>
                                 <li class="">
                                     <a href="/contact">Contact</a>
-
+                                  
                                 </li>
                             </ul>
                         </nav>
                     </div>
                     <div class="rs-header-right">
                         <!-- search area start -->
-
+                      
                         <!-- search area end -->
                         <div class="rs-header-btn">
                             <a class="rs-btn has-theme-orange has-icon has-bg" href="/contact">Get In Touch
@@ -166,57 +159,50 @@
                             <ul class="multipage-menu">
                                 <li class="">
                                     <a href="/">Home</a>
-
+                                 
                                 </li>
                                 <!-- about menu -->
                                 <li class="menu-item-has-children">
-                                    <a href="/company_overview">About</a>
+                                    <a href="/company_overview">About Teraxo</a>
                                     <ul class="submenu last-children">
-                                        <li><a href="/company_overview">Company Overview</a></li>
-                                        <li><a href="/why_choose_us">Why Teraxo </a></li>
+                                  <li><a href="/company_overview">Company Overview</a></li>
+                                    <li><a href="/why_choose_us">Why Teraxo </a></li>
                                     </ul>
                                 </li>
                                 <!-- page menu -->
-                                <li class="menu-item-has-children">
-                                    <a href="/products">Products</a>
-                                    <ul class="submenu last-children">
-                                        <li><a href="/products">All Products</a></li>
-                                        <li><a href="/products">F40</a></li>
-                                        <li><a href="/products">R40</a></li>
-                                        <li><a href="/products">FX40</a></li>
-                                        <li><a href="/products">W40</a></li>
-                                        <li><a href="/products">G40</a></li>
-                                    </ul>
+                         <li class="">
+                                    <a href="/products">Our Products</a>
+                                
                                 </li>
                                 <!-- elements menu -->
-                                <li class="menu-item-has-children">
+                               <li class="menu-item-has-children">
                                     <a href="/footwear_industry">Industries</a>
                                     <ul class="submenu last-children">
                                         <li><a href="/footwear_industry">Footwear Manufacturing</a></li>
-                                        <li><a href="/industry_signage">Signage & Flex Board</a></li>
-                                        <li><a href="/industry_furniture">Furniture & Woodworking</a></li>
-                                        <li><a href="/industry_interiors">Interiors & Modular Kitchen</a></li>
-                                        <li><a href="/industry_automotive">Automotive</a></li>
-                                        <li><a href="/industry_pvc">PVC & UPVC Fabrication</a></li>
-                                        <li><a href="/industry_packaging">Packaging</a></li>
-                                        <li><a href="/industry_handicrafts">Handicrafts & Toys</a></li>
+                                    <li><a href="/industry_signage">Signage & Flex Board</a></li>
+                                    <li><a href="/industry_furniture">Furniture & Woodworking</a></li>
+                                    <li><a href="/industry_interiors">Interiors & Modular Kitchen</a></li>
+                                    <li><a href="/industry_automotive">Automotive</a></li>
+                                    <li><a href="/industry_pvc">PVC & UPVC Fabrication</a></li>
+                                    <li><a href="/industry_packaging">Packaging</a></li>
+                                    <li><a href="/industry_handicrafts">Handicrafts & Toys</a></li>
                                     </ul>
                                 </li>
 
-                                <li>
+                                <li >
                                     <a href="/blogs">Blog</a>
-
+                               
                                 </li>
-                                <li>
+                                <li >
                                     <a href="/contact">Contact</a>
-
+                                
                                 </li>
                             </ul>
                         </nav>
                     </div>
                     <div class="rs-header-right">
                         <!-- search area start -->
-
+                    
                         <!-- search area end -->
                         <div class="rs-header-btn">
                             <a class="rs-btn has-theme-light-green has-icon has-bg" href="/contact">Get In Touch
