--- a/views/industry-signage.ejs
+++ b/views/industry-signage.ejs
@@ -45,7 +45,7 @@
     <!-- preloader end -->
 
     <!-- Header area start -->
-<header>
+    <header>
         <div class="rs-header-area rs-header-one rs-sticky-header" id="rs-sticky-header">
             <div class="container-fluid g-0">
                 <div class="rs-header-inner">
@@ -66,23 +66,16 @@
                                 </li>
                                 <!-- about menu -->
                                 <li class="menu-item-has-children">
-                                    <a href="/company_overview">About</a>
+                                    <a href="/company_overview">About Teraxo</a>
                                     <ul class="submenu last-children">
                                         <li><a href="/company_overview">Company Overview</a></li>
                                     <li><a href="/why_choose_us">Why Teraxo </a></li>
                                     </ul>
                                 </li>
                                 <!-- page menu -->
-                                  <li class="menu-item-has-children">
-                                    <a href="/products">Products</a>
-                                    <ul class="submenu last-children">
-                                        <li><a href="/products">All Products</a></li>
-                                    <li><a href="/products">F40</a></li>
-                                    <li><a href="/products">R40</a></li>
-                                    <li><a href="/products">FX40</a></li>
-                                    <li><a href="/products">W40</a></li>
-                                    <li><a href="/products">G40</a></li>
-                                    </ul>
+                                  <li class="">
+                                    <a href="/products">Our Products</a>
+                                  
                                 </li>
                                 <!-- elements menu -->
                           
@@ -100,7 +93,7 @@
                                     </ul>
                                 </li>
                                 <li class="">
-                                    <a href="blog.html">Blog</a>
+                                    <a href="/blogs">Blog</a>
                                
                                 </li>
                                 <li class="">
@@ -166,23 +159,16 @@
                                 </li>
                                 <!-- about menu -->
                                 <li class="menu-item-has-children">
-                                    <a href="/company_overview">About</a>
+                                    <a href="/company_overview">About Teraxo</a>
                                     <ul class="submenu last-children">
                                   <li><a href="/company_overview">Company Overview</a></li>
                                     <li><a href="/why_choose_us">Why Teraxo </a></li>
                                     </ul>
                                 </li>
                                 <!-- page menu -->
-                         <li class="menu-item-has-children">
-                                    <a href="/products">Products</a>
-                                    <ul class="submenu last-children">
-                                    <li><a href="/products">All Products</a></li>
-                                    <li><a href="/products">F40</a></li>
-                                    <li><a href="/products">R40</a></li>
-                                    <li><a href="/products">FX40</a></li>
-                                    <li><a href="/products">W40</a></li>
-                                    <li><a href="/products">G40</a></li>
-                                    </ul>
+                         <li class="">
+                                    <a href="/products">Our Products</a>
+                                
                                 </li>
                                 <!-- elements menu -->
                                <li class="menu-item-has-children">
@@ -200,7 +186,7 @@
                                 </li>
 
                                 <li >
-                                    <a href="blog.html">Blog</a>
+                                    <a href="/blogs">Blog</a>
                                
                                 </li>
                                 <li >
