--- a/views/terms.ejs
+++ b/views/terms.ejs
@@ -465,7 +465,7 @@
     <!-- preloader end -->
 
     <!-- Header area start -->
-<header>
+    <header>
         <div class="rs-header-area rs-header-one rs-sticky-header" id="rs-sticky-header">
             <div class="container-fluid g-0">
                 <div class="rs-header-inner">
@@ -486,23 +486,16 @@
                                 </li>
                                 <!-- about menu -->
                                 <li class="menu-item-has-children">
-                                    <a href="/company_overview">About</a>
+                                    <a href="/company_overview">About Teraxo</a>
                                     <ul class="submenu last-children">
                                         <li><a href="/company_overview">Company Overview</a></li>
                                     <li><a href="/why_choose_us">Why Teraxo </a></li>
                                     </ul>
                                 </li>
                                 <!-- page menu -->
-                                  <li class="menu-item-has-children">
-                                    <a href="/products">Products</a>
-                                    <ul class="submenu last-children">
-                                        <li><a href="/products">All Products</a></li>
-                                    <li><a href="/products">F40</a></li>
-                                    <li><a href="/products">R40</a></li>
-                                    <li><a href="/products">FX40</a></li>
-                                    <li><a href="/products">W40</a></li>
-                                    <li><a href="/products">G40</a></li>
-                                    </ul>
+                                  <li class="">
+                                    <a href="/products">Our Products</a>
+                                  
                                 </li>
                                 <!-- elements menu -->
                           
@@ -524,7 +517,7 @@
                                
                                 </li>
                                 <li class="">
-                                    <a href="contact.html">Contact</a>
+                                    <a href="/contact">Contact</a>
                                   
                                 </li>
                             </ul>
@@ -535,7 +528,7 @@
                       
                         <!-- search area end -->
                         <div class="rs-header-btn">
-                            <a class="rs-btn has-theme-orange has-icon has-bg" href="contact.html">Get In Touch
+                            <a class="rs-btn has-theme-orange has-icon has-bg" href="/contact">Get In Touch
                                 <span class="icon-box">
                                     <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                                         <path
@@ -586,23 +579,16 @@
                                 </li>
                                 <!-- about menu -->
                                 <li class="menu-item-has-children">
-                                    <a href="/company_overview">About</a>
+                                    <a href="/company_overview">About Teraxo</a>
                                     <ul class="submenu last-children">
                                   <li><a href="/company_overview">Company Overview</a></li>
                                     <li><a href="/why_choose_us">Why Teraxo </a></li>
                                     </ul>
                                 </li>
                                 <!-- page menu -->
-                         <li class="menu-item-has-children">
-                                    <a href="/products">Products</a>
-                                    <ul class="submenu last-children">
-                                    <li><a href="/products">All Products</a></li>
-                                    <li><a href="/products">F40</a></li>
-                                    <li><a href="/products">R40</a></li>
-                                    <li><a href="/products">FX40</a></li>
-                                    <li><a href="/products">W40</a></li>
-                                    <li><a href="/products">G40</a></li>
-                                    </ul>
+                         <li class="">
+                                    <a href="/products">Our Products</a>
+                                
                                 </li>
                                 <!-- elements menu -->
                                <li class="menu-item-has-children">
@@ -624,7 +610,7 @@
                                
                                 </li>
                                 <li >
-                                    <a href="contact.html">Contact</a>
+                                    <a href="/contact">Contact</a>
                                 
                                 </li>
                             </ul>
@@ -635,7 +621,7 @@
                     
                         <!-- search area end -->
                         <div class="rs-header-btn">
-                            <a class="rs-btn has-theme-light-green has-icon has-bg" href="contact.html">Get In Touch
+                            <a class="rs-btn has-theme-light-green has-icon has-bg" href="/contact">Get In Touch
                                 <span class="icon-box">
                                     <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                                         <path
