--- a/views/industry-interiors.ejs
+++ b/views/industry-interiors.ejs
@@ -1047,7 +1047,63 @@ Door No 4,  Survey No 310, Ground Floor, Opp: Global Furnitures, Hulimangala Roa
 
     </div>
 </footer>
-
+   <!-- Animated Mobile Bottom Navbar -->
+   <nav class="mobile-bottom-navbar d-lg-none" id="teraxoMobileNav">
+    <a href="/" class="mobile-nav-link" data-nav="home">
+        <span class="mobile-nav-icon">
+            <i class="ri-home-5-fill"></i>
+        </span>
+        <span class="mobile-nav-label">Home</span>
+    </a>
+    <a href="/products" class="mobile-nav-link" data-nav="products">
+        <span class="mobile-nav-icon">
+            <i class="ri-shopping-bag-3-fill"></i>
+        </span>
+        <span class="mobile-nav-label">Products</span>
+    </a>
+    <a href="/company_overview" class="mobile-nav-link" data-nav="about">
+        <span class="mobile-nav-icon">
+            <i class="ri-information-fill"></i>
+        </span>
+        <span class="mobile-nav-label">About</span>
+    </a>
+    <a href="/footwear_industry" class="mobile-nav-link" data-nav="industries">
+        <span class="mobile-nav-icon">
+            <i class="ri-building-4-fill"></i>
+        </span>
+        <span class="mobile-nav-label">Industries</span>
+    </a>
+    <a href="/contact" class="mobile-nav-link" data-nav="contact">
+        <span class="mobile-nav-icon">
+            <i class="ri-phone-fill"></i>
+        </span>
+        <span class="mobile-nav-label">Contact</span>
+    </a>
+</nav>
+<script>
+    // Simple Active Link Logic
+    (function() {
+        var navMap = {
+            'home': ['/'],
+            'products': ['/products'],
+            'about': ['/company_overview'],
+            'industries': ['/footwear_industry'],
+            'contact': ['/contact']
+        }
+        var pathname = window.location.pathname.replace(/\/$/, '');
+        if(pathname === '') pathname = '/';
+        document.querySelectorAll('.mobile-bottom-navbar .mobile-nav-link').forEach(function(link) {
+            var key = link.getAttribute('data-nav');
+            navMap[key].forEach(function(route) {
+                if (pathname === route) {
+                    link.classList.add('active');
+                }
+            });
+        });
+    })();
+</script>
+<!-- Iconfont CDN for remixicon if not already included -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css">
     <!-- back to top -->
     <div class="backtotop-wrap cursor-pointer">
         <svg class="backtotop-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
